# uf-crsf

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile  release-plz.toml
.github/workflows/: CI.yml  coverage.yml  miri.yml  sec.yml
examples/: local_async.rs  local_blocking.rs  local_raw.rs  local_simple.rs  local_std.rs
examples/stm32demo/: Cargo.toml  justfile  rust-toolchain.toml
examples/stm32demo/src/: main.rs
src/: async_io.rs  blocking_io.rs  constants.rs  error.rs  lib.rs  packet.rs  parser.rs
src/packets/: airspeed.rs  attitude.rs  baro_altitude.rs  battery.rs  commands.rs  device_information.rs  device_ping.rs  esp_now.rs  flight_mode.rs  game.rs  gps.rs  gps_extended.rs  gps_time.rs  heartbeat.rs  link_statistics.rs  link_statistics_rx.rs  link_statistics_tx.rs  logging.rs  mavlink_envelope.rs  mavlink_fc.rs  mavlink_sensor.rs  mod.rs  rc_channels_packed.rs  remote.rs  rpm.rs  temp.rs  vario.rs  voltages.rs  vtx_telemetry.rs
tests/: async_io_test.rs  blocking_io_test.rs  integration_test.rs
