[package]
name = "uf-crsf"
version = "0.3.0"
edition = "2021"

description = "A `no_std` Rust library for parsing the TBS Crossfire protocol, designed for embedded environments"
categories = ["embedded", "no-std"]
authors = ["Nickolai Novik <nickolainovik@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/jettify/uf-crsf"
repository = "https://github.com/jettify/uf-crsf"
readme = "README.md"

[dependencies]
crc = "3.3.0"
defmt = { version = "1.0.1", optional = true }
heapless = "0.9.1"
libm = "0.2.15"
num_enum = { version = "0.7.3", default-features = false }


[dev-dependencies]
serialport = "4.6"

[[example]]
name = "raw"
path = "examples/local_raw.rs"

[[example]]
name = "std"
path = "examples/local_std.rs"

[[example]]
name = "simple"
path = "examples/local_simple.rs"

[features]
"defmt" = ["dep:defmt"]
