[package]
name = "uf-crsf"
version = "0.3.0"
edition = "2021"

description = "A `no_std` Rust library for parsing the TBS Crossfire protocol, designed for embedded environments"
categories = ["embedded", "no-std"]
authors = ["Nickolai Novik <nickolainovik@gmail.com>"]
license = "GPL-3.0"
homepage = "https://github.com/jettify/uf-crsf"
repository = "https://github.com/jettify/uf-crsf"
readme = "README.md"

[dependencies]
crc = "3.3.0"
defmt = { version = "1.0.1", optional = true }
heapless = "0.9.1"
libm = "0.2.15"
num_enum = { version = "0.7.3", default-features = false }
embedded-io-async = { version = "0.7.0", optional = true }
embedded-io = { version = "0.7.0", optional = true }


[dev-dependencies]
serialport = "4.6"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4.4"
embedded-io-adapters = { version = "0.7.0", features = ["tokio-1"] }
embedded-io-async = "0.7.0"


[[example]]
name = "raw"
path = "examples/local_raw.rs"
# requires libudev installed
test = false

[[example]]
name = "std"
path = "examples/local_std.rs"
# requires libudev installed
test = false

[[example]]
name = "simple"
path = "examples/local_simple.rs"

[features]
"defmt" = ["dep:defmt", "embedded-io-async?/defmt", "embedded-io?/defmt"]
"async" = ["dep:embedded-io-async", "dep:embedded-io"]
"blocking" = ["dep:embedded-io"]
